complete_techstack/k8s/Scaling with HPA.yml
#Scenario: Set up a Horizontal Pod Autoscaler (HPA) for a deployment based on CPU usage.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "500m"
