complete_techstack/k8s/Secrets and Deployment.yml
#Question Recap
#Write a Kubernetes YAML file to create a secret containing database credentials (username and password). Update a deployment to use this secret as environment variables.
#secret
apiVersion: v1
kind: Secret
metadata:
  name: db-secret
type: Opaque
data:
  username: dXNlcm5hbWU=   # Base64 encoded value of "username"
  password: cGFzc3dvcmQ=   # Base64 encoded value of "password"
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: app
        image: my-app:latest
